--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,7 +3,19 @@ on:
   pull_request:
     types: 
       - opened
+    branches:
+      - main
+      - 'dev-*' #e.g dev-new dev-this-is-new
+      - 'feat/**' #e.g feat/new feat/new/button
   workflow_dispatch:
+  push:
+    branches:
+      - main
+      - 'dev-*' #e.g dev-new dev-this-is-new
+      - 'feat/**' #e.g feat/new feat/new/button
+    paths-ignore:
+      - '.github/workflows/*'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
